# ftag-r21-legacy

./: .gitignore  README.md  gitcommit.sh  memo  setup.sh
macros/: .nfs0000000000aa00140000162e  MakeDijetMCWeight.cxx  PlottingMacro.cxx  changes.txt  combine_effects.cxx  draw_slice.C  effPlot_eos.cxx  effPlot_newBinning.cxx  effPlot_newBinning.cxx~  effPlot_newBinning_cxx.d  effPlot_newBinning_cxx_ACLiC_dict_rdict.pcm  extract_prj.cxx  file_handling.sh  jTag_eff_checker.cxx  makeSystTable.py  many_combine.sh  merge_f.cxx  norm_diJet_mc_hw.root  norm_diJet_mc_py8.root  parallelSub.sh  postProcess.sh  sys.list
replaceScripts/: TrackBranches.old  btagAnalysisAlg.cxx  btagAnalysisAlg.h
retaggingFramework/source/btagAnalysis/: CMakeLists.txt
retaggingFramework/source/btagAnalysis/btagAnalysis/: ArbitraryJetBranches.hh  BHadronBranchBuffer.hh  BHadronBranches.hh  ClusterBranchBuffer.hh  ClusterBranches.hh  DummyValues.hh  ExampleBranchBuffer.hh  ExampleBranches.hh  GAFlavourLabel.h  ImpactParameterBranchBuffer.hh  ImpactParameterBranches.hh  JetFitterBranchBuffer.hh  JetFitterBranches.hh  JetPropertiesBranchBuffer.hh  KShortBranchBuffer.hh  KShortBranches.hh  KShortRecoBranchBuffer.hh  KShortRecoBranches.hh  LifetimeSigning.hh  SSVFBranchBuffer.hh  SSVFBranches.hh  SVBranchBuffer.hh  SVBranches.hh  SoftMuonBranchBuffer.hh  SoftMuonBranches.hh  SubjetBranchBuffer.hh  SubjetBranches.hh  SubstructureMomentBranchBuffer.hh  SubstructureMomentBranches.hh  TaggerScoreBranchBuffer.hh  TaggerScoreBranches.hh  TrackBranchBuffer.hh  TrackBranches.hh  TrackCovBranchBuffer.hh  TrackCovBranches.hh  UnclusteredVertexBranchBuffer.hh  UnclusteredVertexBranches.hh  track_to_vertex_associators.hh
retaggingFramework/source/btagAnalysis/python/: configHelpers.py
retaggingFramework/source/btagAnalysis/share/: MV2defaults.py  jobOptions_noIncludes.py  jobOptions_subjets.py
retaggingFramework/source/btagAnalysis/src/: .btagAnalysisAlg.cxx.swp  ArbitraryJetBranches.cxx  BHadronBranches.cxx  ClusterBranches.cxx  ExampleBranches.cxx  GAFlavourLabel.cxx  ImpactParameterBranches.cxx  JetFitterBranches.cxx  JetPropertiesBranches.cxx  KShortBranches.cxx  KShortRecoBranches.cxx  LifetimeSigning.cxx  SSVFBranches.cxx  SVBranches.cxx  SoftMuonBranches.cxx  SubjetBranches.cxx  SubstructureMomentBranches.cxx  TaggerScoreBranches.cxx  TrackBranches.cxx  TrackCovBranches.cxx  UnclusteredVertexBranches.cxx  btagAnalysisAlg.cxx  selection.xml  track_to_vertex_associators.cxx
retaggingFramework/source/btagAnalysis/src/components/: btagAnalysis_entries.cxx  btagAnalysis_load.cxx
setup/: RetagFragment.py  SFCalculation.sh  btagAnalysisAlg.cxx  btagAnalysisAlg.h  btagIBLAnalysisAlg.cxx  btagIBLAnalysisAlg.h  jobOptions.py
(+31 files in other folders)
